first running version! small instruction set implemented

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>ajc2.ahead</groupId>
   <artifactId>ahead</artifactId>
-  <version>0.0-SNAPSHOT</version>
+  <version>0.1.6</version>
 
   <name>ahead</name>
   <url>https://ajc2.xyz/projects/ahead</url>
